--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,36 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #6E6E6E;   /*color de fondo*/
+  --foreground: #171717;    /*color de fuente*/
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
+/*html,       /*Evita desbordamiento lateral
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+}*/
 
 body {
   color: var(--foreground);
   background: var(--background);  
   font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;      /*Suavizadores de fuente*/
   -moz-osx-font-smoothing: grayscale;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: none;    /*Quita el subrayado de los enlaces*/
 }
-
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {   Sirve por si el usuario pone modo oscuro en su dispositivo
+  :root {
+    --background: blue;
+    --foreground: #ededed;
+  }
+}*/  
+/*@media (prefers-color-scheme: dark) {    Indica a los navegadores que admite modo oscuro
   html {
     color-scheme: dark;
   }
-}
+}*/
