--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,6 @@
   --foreground: #171717;    /*color de fuente*/
 }
 
-/*html,       /*Evita desbordamiento lateral
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}*/
-
 body {
   color: var(--foreground);
   background: var(--background);  
@@ -17,20 +11,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
 
 a {
   color: inherit;
   text-decoration: none;    /*Quita el subrayado de los enlaces*/
 }
-/*@media (prefers-color-scheme: dark) {   Sirve por si el usuario pone modo oscuro en su dispositivo
-  :root {
-    --background: blue;
-    --foreground: #ededed;
-  }
-}*/  
-/*@media (prefers-color-scheme: dark) {    Indica a los navegadores que admite modo oscuro
-  html {
-    color-scheme: dark;
-  }
-}*/
+
