--- a/src/app/components/menu.module.css
+++ b/src/app/components/menu.module.css
@@ -1,26 +1,15 @@
 /* components/Sidebar.module.css */
 .sidebar {
-    width: 250px;
-    height: 100vh; /* Ocupa toda la altura de la pantalla */
-    background-color: #333;
+    width: 300px;
+    height: calc(100vh - 125px); /* Ajusta la altura restando los 100px */
+    background-color: #1e1e1e;
     color: white;
     position: fixed;
-    top: 0;
+    top: 125px;
     left: 0;
-    padding-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-  }
-  
-  .logo {
-    text-align: center;
-    margin-bottom: 40px;
-  }
-  
-  .logo h2 {
-    font-size: 24px;
-    color: white;
   }
   
   .menu {
@@ -31,20 +20,22 @@
   .menuItem {
     display: flex;
     align-items: center;
-    padding: 15px;
+    padding: 30px;
     text-decoration: none;
     color: white;
+    font-weight: bold;  
     font-size: 18px;
   }
   
   .menuItem:hover {
-    background-color: #555;
+    background-color: #383838;
   }
   
-  .icon {
-    margin-right: 10px;
-    font-size: 20px;
+  .icon, .iconTrophy {
+    margin-right: 20px;
+    font-size: 38px;
   }
+
   
   .menuItem:hover .icon {
     color: #007bff;
