--- a/src/app/components/header.module.css
+++ b/src/app/components/header.module.css
@@ -1,14 +1,19 @@
 .header {
-    background-color: #1e1e1e; /* Color oscuro de fondo */
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Esto mantiene el logo izquierdo y el perfil derecho en sus lugares */
-    padding: 30px 20px;
-    height: 80px; /* Altura fija del header */
-    position: relative; /* Necesario para el posicionamiento absoluto del logo central */
-  }
-  
+  background-color: #1e1e1e; /* Color oscuro de fondo */
+  position: fixed;  /* Fija el header en la pantalla */
+  top: 0; /* Lo posiciona en la parte superior */
+  left: 0; /* Alineado a la izquierda */
+  width: 100%; /* Ocupa todo el ancho */
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Esto mantiene el logo izquierdo y el perfil derecho en sus lugares */
+  padding: 30px 20px;
+  height: 80px; /* Altura fija del header */
+  z-index: 1000; /* Para que esté por encima del resto */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra opcional */
+}
+
   .logoNom {
     display: flex;
     align-items: center;
@@ -34,3 +39,12 @@
   .custom-icon {
     height: 100px;
   }
+
+  .profile {
+    margin-right: 40px
+  }
+  
+  .profile:hover .iconProfile {
+    color: #007bff;
+  }
+  
