--- a/src/app/comun/withMenu/initial/initial.module.css
+++ b/src/app/comun/withMenu/initial/initial.module.css
@@ -3,7 +3,7 @@
   margin-left: 300px;
   width: calc(100% - 300px); /* Corrige la expresión '100% - 300px' */
   height: calc(100vh - 140px);
-  background-color: #3A3A3A;
+  background-color: #6e6e6e;
   display: flex;
   justify-content: center; /* Centra el contenido horizontalmente */
   align-items: center; /* Centra el contenido verticalmente */
@@ -11,7 +11,7 @@
 }
 
 .containerPartidas {
-  background-color: #1e1e1e; 
+  background-color: #3a3a3a; 
   width: 80%;
   height: 400px;
   margin: 50px 0 30px 0; /* Separación arriba (80px) y abajo (30px) */
@@ -23,7 +23,7 @@
   overflow-y: auto;
 }
 
-/* Personalización de scroll para navegadores Webkit (Chrome, Safari, Edge) */
+/* Personalización de scroll para navegadores Webkit (Chrome, Safari, Edge)*/
 .containerPartidas::-webkit-scrollbar {
   width: 14px;
 }
@@ -43,7 +43,6 @@
   padding: 30px;
   height: 30px;
   width: 90%; 
-  border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -54,11 +53,13 @@
 .card{
   background-color: #e0e0e0;
   border: 4px solid #3E76DF;
+  border-radius: 8px;
 }
 
 .cardRacha{
-  background-color: #f9f69b;
-  border: 4px solid #ffc400;
+  color: #e0e0e0;
+  background-color: #1e1e1e;
+  border: 4px solid #1e1e1e;
 }
 
 .racha {
@@ -91,6 +92,12 @@
   font-size: 60px;
 }
 
+.iconoInfo{
+  font-size: 30px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
 .text {
   font-size: 26px;
   font-weight: bold;
@@ -118,7 +125,7 @@
   background-color: #3E76DF;
   color: white;
   border: none;
-  padding: 15px 36px;
+  padding: 15px 80px;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 10px;
@@ -135,5 +142,55 @@
 }
 
 .searchButton:hover, .playButton:hover{
-  background-color: #679cff;
+  background: #0056b3;
 }
+/* Estilos para la pestaña de información */
+.infoPopup {
+  background-color: rgba(0, 0, 0, 0.9); /* Fondo negro con opacidad */
+  padding: 10px;
+  border: 2px solid #3E76DF;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: absolute; /* Esto asegura que el popup se posicione respecto al contenedor del icono */
+  z-index: 10;
+  width: 260px; /* El ancho será automático para adaptarse al contenido */
+  font-size: 14px;
+  color: white;
+  pointer-events: none; /* Para que el clic no interfiera con otros elementos */
+  transition: opacity 0.3s ease-in-out; /* Suaviza la transición de la opacidad */
+  opacity: 0; /* Inicia con opacidad 0 */
+}
+
+/* Mostrar la ventana emergente cuando el icono está en hover */
+.iconoInfo:hover + .infoPopup {
+  opacity: 1; /* Mostrar la ventana al pasar el ratón por encima */
+  pointer-events: all; /* Habilitar interacción cuando está visible */
+}
+
+/* Estilo del icono de información cuando se pasa el mouse */
+.iconoInfo {
+  position: relative; /* Esto es necesario para que el infoPopup se posicione correctamente */
+  cursor: pointer;
+}
+
+.iconoInfo:hover {
+  color: #3E76DF;
+}
+
+/* Título con color diferente */
+.infoPopup .title {
+  color: #3E76DF;
+  font-weight: bold;
+  font-size: 14px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+/* Descripción con color distinto */
+.infoPopup .description {
+  color: #fff;
+  font-size: 14px;
+  margin: 0;
+  word-wrap: break-word;
+}
+ 
