--- a/src/app/components/header.module.css
+++ b/src/app/components/header.module.css
@@ -48,3 +48,23 @@
     color: #007bff;
   }
   
+  .userProfile {
+    display: flex;
+    flex-direction: column; /* Organiza los elementos en columna */
+    align-items: center; /* Centra el contenido horizontalmente */
+    text-align: center; /* Asegura que el texto esté centrado */
+}
+
+.userAvatar {
+    width: 80px; /* Ajusta el tamaño de la imagen */
+    height: 80px;
+    border-radius: 50%; /* Hace la imagen redonda */
+    object-fit: cover; /* Ajusta la imagen dentro del espacio */
+}
+
+.userName {
+    margin-top: 4px; /* Espacio entre la imagen y el nombre */
+    font-size: 16px; /* Ajusta el tamaño del texto */
+    font-weight: bold;
+}
+
