--- a/src/app/comun/game/game.module.css
+++ b/src/app/comun/game/game.module.css
@@ -277,3 +277,36 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
 }
+
+.extraActions {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.inlineButtons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 1px;
+}
+
+.iconButtonTablas, .iconButtonAbandono {
+  font-size: 28px;
+  background-color: #222;
+  border: none;
+  cursor: pointer;
+  width: 140px;
+  height: 50px;
+  border-radius: 8px;
+  transition: background-color 0.2s ease;
+}
+
+.iconButtonAbandono:hover {
+  background-color: #c82333;
+}
+
+.iconButtonTablas:hover {
+  background-color: #357ABD;
+}
