--- a/src/app/comun/withMenu/profile/profile.module.css
+++ b/src/app/comun/withMenu/profile/profile.module.css
@@ -65,7 +65,7 @@
     width: 180px;
     height: 180px;
     margin-top: 30px;
-    background: #555;
+    background: #3a3a3a;
     color: white;
     display: flex;
     flex-direction: column;
