--- a/src/app/comun/withMenu/friend/friend.module.css
+++ b/src/app/comun/withMenu/friend/friend.module.css
@@ -89,14 +89,20 @@
 .photo {
     width: 50px;
     height: 50px;
-    background-color: #6b6b6b;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: #ddd; /* fallback */
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 5px;
-    color: white;
-    margin-right: 20px;
-}
+  }
+  
+  .image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
 
 .actions {
     display: flex;
