--- a/src/app/comun/game/game.module.css
+++ b/src/app/comun/game/game.module.css
@@ -164,12 +164,12 @@
 }
 
 .playerInfoTop {
-  top: 15px;
+  top: 8px;
   justify-content: space-between;
 }
 
 .playerInfoBottom {
-  bottom: 15px;
+  bottom: 8px;
   justify-content: space-between;
 }
 
@@ -209,16 +209,22 @@
   display: inline-block;
 }
 
+.profilePicture {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+}
+
 .activePlayer {
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 5px;
-  padding: 5px;
-  transition: background-color 0.3s ease;
+  padding: 3px;
 }
 
 .inactivePlayer {
   opacity: 0.5;
-  transition: opacity 0.3s ease;
+  padding: 3px;
+  transition: none; /* Desactiva transiciones */
 }
 
 
