--- a/src/app/comun/withMenu/opening/learn/learn.module.css
+++ b/src/app/comun/withMenu/opening/learn/learn.module.css
@@ -1,18 +1,19 @@
 .reviewContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #333;
-    top: 140px;
-    min-height: calc(100vh - 140px);
-    width: 100%;
-    color: white;
-    background-color: #6e6e6e;
-    position: relative;
-    padding-left: 380px; 
-    box-sizing: border-box;
-    overflow: auto;
-    min-height: 100vh;
+  padding-top: 140px;
+  padding-left: 300px; 
+  min-height: calc(100vh - 140px);
+  width: 100%;  
+  height: calc(100vh - 140px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #333;
+  color: white;
+  background-color: #6e6e6e;
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
+  min-height: 100vh;
   }
 
   .gameBody {
