Ajustes y revisar partida desde partida

--- a/src/app/comun/game/game.module.css
+++ b/src/app/comun/game/game.module.css
@@ -45,6 +45,13 @@
   margin-bottom: 0px;
 }
 
+.lostByTime {
+  font-size: 1.2rem;
+  color: white;
+  margin-top: 8px;
+}
+
+
 .trophy {
   font-size: 70px;
   color: gold;
