--- a/src/app/components/footer.module.css
+++ b/src/app/components/footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: #1e1e1e;
-  color: white;
+  color: #aaa;
   text-align: center;
   padding-top: 20px;
   padding-bottom: 16px;
