--- a/src/app/components/menu.module.css
+++ b/src/app/components/menu.module.css
@@ -29,6 +29,7 @@
     color: white;
     font-weight: bold;  
     font-size: 18px;
+    cursor: pointer;
   }
   
   .icon, .iconTrophy {
@@ -79,6 +80,72 @@
   
   .dropdownMenu .menuItem:last-child {
     border-bottom: none;
+  }
+  
+  .popup {
+    position: absolute;
+    bottom: 60px;
+    left: 20px;
+    background-color: #2c2c2c;
+    border: 1px solid #444;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+    padding: 16px 0;
+    z-index: 100;
+    min-width: 220px;
+    animation: fadeIn 0.25s ease-in-out;
+  }
+  
+  /* Triángulo */
+  .triangle {
+    position: absolute;
+    bottom: -10px;
+    left: 30px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #2c2c2c;
+  }
+  
+  .popupList {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+  
+  .popupItem {
+    display: block;
+    padding: 14px 20px;
+    width: 100%;
+    color: white;
+    font-size: 1.1em;
+    font-weight: 500;
+    text-align: left;
+    border: none;
+    background: none;
+    transition: background-color 0.2s ease;
+    text-decoration: none;
+  }
+  
+  .popupItem:hover {
+    background-color: #3E76DF;
+    color: white;
+    cursor: pointer;
+    border-radius: 0;
+  }
+  
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(5px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
   
 
