--- a/src/app/components/FriendRequest.module.css
+++ b/src/app/components/FriendRequest.module.css
@@ -22,10 +22,16 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   }
   
+  .modalBox h2 {
+    margin: 0;
+    color: #3E76DF;
+    font-size: 1.5rem;
+  }
+
   .modalBox button {
     margin-top: 1rem;
     padding: 0.8rem 1.2rem;
-    background: #0070f3;
+    background: #3E76DF;
     color: white;
     border: none;
     border-radius: 4px;
