--- a/src/app/components/menu.module.css
+++ b/src/app/components/menu.module.css
@@ -20,6 +20,59 @@
   .active, .menuItem:hover {
     background-color: #181717;
   }
+
+  /* Mensaje de confirmación de logout */
+.confirmOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.confirmBox {
+  background: #222;
+  padding: 30px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.confirmText {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.confirmButtons {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+.confirmYes, .confirmNo {
+  padding: 10px 20px;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.confirmYes {
+  background: #28a745;
+  color: white;
+}
+
+.confirmNo {
+  background: #dc3545;
+  color: white;
+}
   
   .menuItem {
     display: flex;
@@ -85,7 +138,7 @@
   .popup {
     position: absolute;
     bottom: 60px;
-    left: 20px;
+    left: 60px;
     background-color: #2c2c2c;
     border: 1px solid #444;
     border-radius: 12px;
@@ -113,14 +166,18 @@
     padding: 0;
     margin: 0;
     width: 100%;
+    height: 100%;
   }
   
-  .popupItem {
+  .popupItem, .popupItemLogout {
     display: block;
+    display: flex;
+    align-items: center;
     padding: 14px 20px;
     width: 100%;
+    box-sizing: border-box;
     color: white;
-    font-size: 1.1em;
+    font-size: 18px;
     font-weight: 500;
     text-align: left;
     border: none;
@@ -128,12 +185,37 @@
     transition: background-color 0.2s ease;
     text-decoration: none;
   }
+
+  .popupList li {
+    padding: 0;
+    margin: 0;
+  }
+  
   
   .popupItem:hover {
     background-color: #3E76DF;
     color: white;
     cursor: pointer;
     border-radius: 0;
+  }
+
+  .popupItemLogout:hover {
+    background-color: #e12121;
+    color: white;
+    cursor: pointer;
+    border-radius: 0;
+  }
+
+  .emoji{
+    font-size: 24px;
+    margin: 0 10px;
+  }
+
+  .profilePhoto{
+    width: 30px;
+    height: 30px;
+    margin-right: 14px;
+    margin-left: 12px;
   }
   
   
