--- a/src/app/comun/withMenu/profile/profile.module.css
+++ b/src/app/comun/withMenu/profile/profile.module.css
@@ -88,12 +88,21 @@
 .profileName {
     display: flex;
     justify-content: space-between;
-    flex-grow: 1;
     padding-left: 40px;
     font-size: 30px;
     font-weight: bold;
     color: #3E76DF;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+}
+
+.profileCorreo{
+    display: flex;
+    padding-left: 40px;
+    font-size: 20px;
+    color: #aaa;
+    margin-bottom: 8px;
+    margin-top: 5px;
+
 }
 
 /* 🔹 Información en columnas */
@@ -320,7 +329,7 @@
 }
 
 .confirmBox {
-    background: #6e6e6e;
+    background: #222;
     padding: 30px;
     border-radius: 10px;
     text-align: center;
