--- a/src/app/comun/withMenu/ranking/ranking.module.css
+++ b/src/app/comun/withMenu/ranking/ranking.module.css
@@ -192,6 +192,29 @@
   .closeButton:hover {
     transform: scale(1.2);
   }
+
+
+  .loginButton {
+    display: inline-block;
+    margin-top: 0.5rem;
+    padding: 0.5rem 1rem;
+    background-color: #3E76DF;
+    color: white;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    transition: transform 0.2s ease-in-out;
+    border: 2px solid #3E76DF;
+  }
+  
+  .loginButton:hover {
+    background-color: #2c2c2c;
+    color: #3E76DF;
+    transform: scale(1.2);
+    border: 2px solid #3E76DF;
+  }
+  
   
   
   
