--- a/src/app/comun/game/game.module.css
+++ b/src/app/comun/game/game.module.css
@@ -58,6 +58,14 @@
   margin-bottom: 20px;
 }
 
+.eloFinal{
+  font-size: 20px;
+  font-weight: bold;
+  color: #fff;
+  margin-bottom: 0px;
+  margin-top:0px;
+}
+
 .reviewButton, .newGameButton, .rematchButton, .newGameButtonCancel {
   padding: 10px 15px;
   border: none;
@@ -444,6 +452,8 @@
   margin-top: 25px;
   animation: spin 1s linear infinite;
 }
+
+
 
 
 @keyframes spin {
