--- a/src/app/comun/withMenu/initial/initial.module.css
+++ b/src/app/comun/withMenu/initial/initial.module.css
@@ -139,19 +139,18 @@
   color: white;
   font-weight: bold;
   border: none;
+  border: 2px solid #3E76DF;
   padding: 15px 30px;
   border-radius: 5px;
   cursor: pointer;
+  transition: background 0.3s ease-in-out;
+
 }
 
 .playButton:hover {
-  background-color: #3E76DF;
-  color: white;
-  font-weight: bold;
-  border: none;
-  padding: 15px 30px;
-  border-radius: 5px;
-  cursor: pointer;
+  background-color: #1e1e1e;
+  color: #3E76DF;
+  border: 2px solid #3E76DF;
 }
 
 
@@ -183,6 +182,7 @@
   border-radius: 5px;
   cursor: pointer;
   display: flex;
+  border: 4px solid #3E76DF;
   align-items: center;
   justify-content: center;
   font-weight: bold;
@@ -190,6 +190,7 @@
   gap: 10px;  /* Aumentamos espacio entre icono y texto */
   white-space: nowrap;
 }
+
 
 .iconSearch {
   font-size: 38px; /* 🔹 Fuerza el tamaño del icono */
