--- a/src/app/comun/game/game.module.css
+++ b/src/app/comun/game/game.module.css
@@ -453,7 +453,18 @@
   animation: spin 1s linear infinite;
 }
 
-
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5); /* Oscurece el fondo */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999; /* Encima de todo */
+}
 
 
 @keyframes spin {
