--- a/src/app/comun/withMenu/review/review.module.css
+++ b/src/app/comun/withMenu/review/review.module.css
@@ -165,6 +165,19 @@
     object-fit: cover;
   }
 
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5); /* Oscurece el fondo */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999; /* Encima de todo */
+  }
+
   .winnerOverlay {
     position: absolute;
     top: 50%;
